r26:
+ Adjusted setPosition() function. It's now possible to move KINEMATIC objects trough the levels like an irrlicht node.

r25:
+ Added new animator, called TimeCallBackAnimator that helps to call a function after a defined time

r22:
+ Removed an unused variable, updated irrBPLib VS project

r21:
+ Added new animator, called CollisionCallbackAnimator that helps to retrieve the collision-point of an object by calling a user function

r20:
+ New function clear() to remove all bodies and constraints from the world

r19:
+ Added ERP-ERP2-CFM modifier functions
+ Added Time-Step modifier function

IrrBP 0.11 (r18):
+ Updated Documentation to solve linking problems with bullet > 2.76

r17:
+ Removed an un-necessary library from Hello World example

r16:
+ Added CCD support

IrrBP 0.1 (r15):
+ Updated VC Projects

r14:
+ Completely changed the object hierarchy to easily implements other futures objects.
+ Bullet Manager Updated
+ Soft Bodies optimization
+ IrrBP Bullet World optimization
+ Code tweaks to avoid strange memory leaks

r13:
+ Completed mesh support for Patch/Ropes. You can new use getMesh() [Only for patch] or setDraw(true) [Only for Rope] to draw the objects

r12:
+ Added mesh support for basic soft bodies (Patch and Rope). You can now use the getMesh() function to retrieve the mesh to attach to a node

r8-r11:
+ New Wiki Article. SVN syncronized

r7:
+ World's destructor optimized. Needed due to soft-body preparation
+ Added Soft Body Implementation (Minimal). In the next releases the implementation will be improved.
  + Cloth
  + Rope

r6:
+ SVN Adjust

r5:
+ Added body orientation support to cone body
+ Doxygen documentation renewed

r4 [minor]:
+ adjusted error in doxygen documentation

IrrBP 0.01 (r3):
* First irrBP release
+ Added (minimal) Debug Drawer for bullet' world
+ Added Cone Twist Constraint
+ Set new flag (IRRBP_DEBUG_TEXT) to write debug text into the console.
+ Improved Bullet Manager

r2:
First SVN release